--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jokes-sse",
   "version": "1.0.0",
-  "description": "Jokes MCP with SSE",
+  "description": "MCP Server",
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
@@ -10,13 +10,13 @@
     "dev": "ts-node-esm src/index.ts"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.9.0",
+    "@modelcontextprotocol/sdk": "~1.9.0",
     "express": "^5.1.0",
-    "zod": "^3.24.2"
+    "zod": "^3.25.7"
   },
   "devDependencies": {
-    "@types/express": "^5.0.1",
+    "@types/express": "^5.0.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   }
 }
