--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "dev": "ts-node-esm src/index.ts"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "~1.9.0",
+    "@modelcontextprotocol/sdk": "~1.11.4",
+    "content-type": "^1.0.5",
     "express": "^5.1.0",
     "zod": "^3.25.7"
   },
   "devDependencies": {
+    "@types/content-type": "^1.1.8",
     "@types/express": "^5.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
